# avaya_onboarding

./: .gitignore  Cargo.toml  README.md  data.json
src/: main.rs
src/handlers/: create_user.rs  get_applicants.rs  get_user.rs  get_user_details.rs  mod.rs  update_user.rs
src/models/: employee.rs
src/routes/: mod.rs
src/storage/: mod.rs  storage.rs
